tests/ui/resolve/issue-3099-b.rs
pub mod a {}

pub mod a {} //~ ERROR the name `a` is defined multiple times

fn main() {}
